--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <title>Angular example DIST</title>
 
-    <link rel="stylesheet" href="node_modules/materialize-css/dist/css/materialize.min.css">
-    <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="dist/css/materialize.min.css">
     <link rel="stylesheet" href="dist/css/style.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -20,10 +19,10 @@
         </div>
     </ms-layout>
 
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/angular/angular.min.js"></script>
-    <script src="node_modules/angular-ui-router/release/angular-ui-router.min.js"></script>
-    <script src="node_modules/materialize-css/dist/js/materialize.min.js"></script>
+    <script src="dist/js/library/jquery.min.js"></script>
+    <script src="dist/js/library/angular.min.js"></script>
+    <script src="dist/js/library/angular-ui-router.min.js"></script>
+    <script src="dist/js/library/materialize.min.js"></script>
     <script src="dist/js/app.js"></script>
 </body>
 </html>
