--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     </ms-layout>
 
     <script src="dist/js/library/jquery.min.js"></script>
+    <script src="dist/js/library/bigscreen.min.js"></script>
     <script src="dist/js/library/angular.min.js"></script>
     <script src="dist/js/library/angular-ui-router.min.js"></script>
     <script src="dist/js/library/materialize.min.js"></script>
