--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Angular example DIST</title>
 
     <link rel="stylesheet" href="dist/css/materialize.min.css">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
@@ -18,6 +19,8 @@
             <div class="dot2"></div>
         </div>
     </ms-layout>
+
+    <div class="paranga"></div>
 
     <script src="dist/js/library/jquery.min.js"></script>
     <script src="dist/js/library/bigscreen.min.js"></script>
