--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <title>Angular example DIST</title>
 
-    <link rel="stylesheet" href="dist/css/materialize.min.css">
+    <!--<link rel="stylesheet" href="dist/css/materialize.min.css">
+    <link rel="stylesheet" href="dist/css/font-awesome.min.css">-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="dist/css/style.css">
     <!--Let browser know website is optimized for mobile-->
@@ -22,11 +23,11 @@
 
     <div class="paranga"></div>
 
-    <script src="dist/js/library/jquery.min.js"></script>
+    <!--<script src="dist/js/library/jquery.min.js"></script>
     <script src="dist/js/library/bigscreen.min.js"></script>
     <script src="dist/js/library/angular.min.js"></script>
     <script src="dist/js/library/angular-ui-router.min.js"></script>
-    <script src="dist/js/library/materialize.min.js"></script>
+    <script src="dist/js/library/materialize.min.js"></script>-->
     <script src="dist/js/app.js"></script>
 </body>
 </html>
