--- a/index.html
+++ b/index.html
@@ -29,5 +29,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     
     <script src="dist/js/app.js"></script>
+
+    <script src="https://code.angularjs.org/1.1.1/angular-mocks.js"></script>
 </body>
 </html>
