Amended font-awesome include cdn

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Angular example DIST</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="dist/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
     <!--Let browser know website is optimized for mobile-->
