--- a/index.html
+++ b/index.html
@@ -5,9 +5,14 @@
     <title>Angular example DIST</title>
 
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.5/css/materialize.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="dist/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
+     <!-- Angular Text-Editor -->
+    <link rel="stylesheet" href="http://textangular.com/dist/textAngular.css" type="text/css">
+    <!-- Angular Toaster -->
+    <link rel="stylesheet" href="https://unpkg.com/angular-toastr/dist/angular-toastr.css" />
     <!--Let browser know website is optimized for mobile-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 </head>
@@ -29,6 +34,17 @@
     <!-- Select2 -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/js/select2.min.js"></script>
     
+    <!-- Angular -->
+    <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.6.0/angular.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js'></script>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-animate.min.js'></script>
+    <!-- Angular Text-Editor -->
+    <script src='http://textangular.com/dist/textAngular-rangy.min.js'></script>
+    <script src='http://textangular.com/dist/textAngular-sanitize.min.js'></script>
+    <script src='/myLibs/textAngular.js'></script>
+    <!-- Angular Toaster -->
+    <script src="https://unpkg.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
+
     <script src="dist/js/app.js"></script>
 
     <script src="https://code.angularjs.org/1.1.1/angular-mocks.js"></script>
