--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="dist/css/style.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.3/css/select2.min.css" rel="stylesheet" />
      <!-- Angular Text-Editor -->
-    <link rel="stylesheet" href="http://textangular.com/dist/textAngular.css" type="text/css">
+    <link rel="stylesheet" href="myLibs/css/textAngular.css" type="text/css">
     <!-- Angular Toaster -->
     <link rel="stylesheet" href="https://unpkg.com/angular-toastr/dist/angular-toastr.css" />
     <!--Let browser know website is optimized for mobile-->
@@ -39,9 +39,9 @@
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.2/angular-ui-router.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-animate.min.js'></script>
     <!-- Angular Text-Editor -->
-    <script src='http://textangular.com/dist/textAngular-rangy.min.js'></script>
-    <script src='http://textangular.com/dist/textAngular-sanitize.min.js'></script>
-    <script src='/myLibs/textAngular.js'></script>
+    <script src='/myLibs/js/textAngular-rangy.min.js'></script>
+    <script src='/myLibs/js/textAngular-sanitize.min.js'></script>
+    <script src='/myLibs/js/textAngular.js'></script>
     <!-- Angular Toaster -->
     <script src="https://unpkg.com/angular-toastr/dist/angular-toastr.tpls.js"></script>
 
